# modular_tree

./: .gitignore  .gitmodules  CONTRIBUTING.md  Codesoft Tasks -1 Rock-Paper-Scissors Game (python programming)  Nodes.py  README.md  VERSION  __init__.py  addon_add_Modular_tree.py  addon_name.py  addon_updater.py  addon_updater_ops.py  auto_load.py  bridge.py  build_mtree.bat  build_mtree.osx  build_mtree.sh  check_for_updates.py  clock.py  color_ramp_sampler.py  generator_operators.py  geometry.py  grease_pencil.py  icons.py  logo.py  material_tools.py  modules.py  nodes.py  particle_configurator.py  prep_manager.py  presets.py  pruning.py  split.py  toolbar_functions.py  tree.py  tree_creator.py  tree_function.py  tree_functions.py  tree_node.py  uv_tools.py  (+3 more)
m_tree/: CMakeLists.txt  LICENSE.md  install.py  setup.py  test.py
m_tree/Source/: CMakeLists.txt  main.cpp
m_tree/Source/BaseTypes/: Mesh.hpp  Node.cpp  Node.hpp  Tree.cpp  TreeFunction.hpp
m_tree/Source/Meshers/: BasicMesher.cpp
m_tree/Source/Meshers/manifold_mesher/: ManifoldMesher.cpp  ManifoldMesher.hpp  smoothing.cpp
m_tree/Source/Meshers/splines_mesher/: BasicMesher.cpp
m_tree/Source/TreeFunctions/: BranchFunction.hpp  GrowthFunction.cpp  GrowthFunction.hpp  TrunkFunction.hpp
m_tree/Source/Utilities/: GeometryUtilities.cpp  GeometryUtilities.hpp  NodeUtilities.cpp  NodeUtilities.hpp
m_tree/Source/mesh/: Mesh.cpp  Mesh.hpp
m_tree/Source/tree/: Node.cpp  Node.hpp
m_tree/Source/tree_functions/: BranchFunction.cpp  GrowthFunction.cpp  TrunkFunction.cpp  TrunkFunction.hpp
m_tree/binaries/Release/: m_tree.exp
m_tree/python_bindings/: CMakeLists.txt  main.cpp
m_tree/source/: CMakeLists.txt
m_tree/source/Meshers/manifold_mesher/: smoothing.hpp
m_tree/source/Utilities/: GeometryUtilities.cpp  NodeUtilities.cpp  NodeUtilities.hpp  RandomGenerator.hpp
m_tree/source/mesh/: Mesh.cpp  Mesh.hpp
m_tree/source/meshers/base_types/: TreeMesher.hpp
m_tree/source/meshers/manifold_mesher/: ManifoldMesher.cpp  ManifoldMesher.hpp
m_tree/source/tree/: Node.cpp  Node.hpp  Tree.hpp
m_tree/source/tree_functions/: BranchFunction.cpp  BranchFunction.hpp  GrowthFunction.cpp  GrowthFunction.hpp  PipeRadiusFunction.cpp  PipeRadiusFunction.hpp  TrunkFunction.cpp
m_tree/source/utilities/: GeometryUtilities.cpp  GeometryUtilities.hpp  NodeUtilities.cpp  NodeUtilities.hpp
m_tree/tests/: CMakeLists.txt  main.cpp
m_tree_cpp_project/: CMakeLists.txt  m_tree.cp37-win_amd64.pyd  setup.py  test.py
m_tree_cpp_project/Source/: main.cpp
m_tree_cpp_project/Source/BaseTypes/: GrowthInfo.hpp  Mesh.cpp  Mesh.hpp  Node.hpp  Tree.cpp  Tree.hpp  TreeFunction.cpp  TreeFunction.hpp  TreeMesher.hpp  VertexGroup.hpp
m_tree_cpp_project/Source/Meshers/: BasicMesher.cpp  BasicMesher.hpp
m_tree_cpp_project/Source/TreeFunctions/: BranchFunction.cpp  BranchFunction.hpp  GrowthFunction.cpp  GrowthFunction.hpp  TrunkFunction.cpp  TrunkFunction.hpp
m_tree_cpp_project/Source/Utilities/: GeometryUtilities.cpp  GeometryUtilities.hpp  NodeUtilities.cpp  NodeUtilities.hpp
m_tree_cpp_project/m_tree.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nodes/: __init__.py  (+9 more)
(+56 files in other folders)
